// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Collapsed renders correctly 1`] = `
<jest>
  <div
    class="ecl-popover"
    data-ecl-auto-init="Popover"
  >
    <a
      aria-controls="popover-example"
      aria-expanded="false"
      aria-label="Popover toggle"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle"
      data-ecl-popover-toggle=""
      href="/example"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#share"
        />
      </svg>
      <span
        class="ecl-link__label"
      >
        Popover
      </span>
    </a>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__content"
      >
        Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Popover Collapsed renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-popover"
    data-ecl-auto-init="Popover"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <a
      aria-controls="popover-example"
      aria-expanded="false"
      aria-label="Popover toggle"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle"
      data-ecl-popover-toggle=""
      href="/example"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#share"
        />
      </svg>
      <span
        class="ecl-link__label"
      >
        Popover
      </span>
    </a>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__content"
      >
        Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Popover Collapsed renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-popover custom-class custom-class--test"
    data-ecl-auto-init="Popover"
  >
    <a
      aria-controls="popover-example"
      aria-expanded="false"
      aria-label="Popover toggle"
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-popover__toggle"
      data-ecl-popover-toggle=""
      href="/example"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-link__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#share"
        />
      </svg>
      <span
        class="ecl-link__label"
      >
        Popover
      </span>
    </a>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__content"
      >
        Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
      </div>
    </div>
  </div>
</jest>
`;
